# logfire-setup

./: .gitignore  CLAUDE.md  LICENSE  README.md  main.py  plan.md  pyproject.toml
logfire_setup/: __init__.py  agents_md.py  api_client.py  auth_checker.py  categories.py  detector.py  installer.py  instructions.py  main.py  mcp_checker.py
tests/: test_agents_md.py  test_api_client.py  test_auth_checker.py  test_detector.py  test_instructions.py  test_mcp_checker.py
